--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,15 +1,21 @@
 @use 'variables';
 
+footer{
+	background: linear-gradient(to right, rgba(71, 69, 69, 0.932) , rgba(24, 24, 24, 0.961));
+}
 .redes {
 	display: flex;
 	justify-content: center;
 	gap: 40px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
+	margin-top: 5px;
+
 
 	&__icono {
 		color: #888888;
 		width: 30px;
 		height: 30px;
+		font-size: 30px;
 		transition: 0.3s ease all;
 
 		&:hover {
@@ -22,6 +28,6 @@
 	font-family: variables.$secondary-font-family;
 	font-size: 16px;
 	text-align: center;
-	margin-bottom: 150px;
+	margin-bottom: 5px;
 	color: #888888;
 }
