--- a/sass/_galeria.scss
+++ b/sass/_galeria.scss
@@ -48,18 +48,21 @@
 		color: #fff;
 		width: 40px;
 		height: 40px;
+		font-size: 30px;
 		cursor: pointer;
 
 		&--anterior {
 			position: absolute;
 			left: -5%;
 			top: calc(50% - 20px);
+			font-size: 30px;			
 		}
 
 		&--siguiente {
 			position: absolute;
 			right: -5%;
 			top: calc(50% - 20px);
+			font-size: 30px;
 		}
 	}
 
@@ -114,6 +117,7 @@
 		}
 	}
 	&__carousel-image {
+		width: 8.75rem;
 		max-height: 100px;
 		vertical-align: top;
 	}
