--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -2,26 +2,28 @@
 
 .hero {
 	width: 100%;
-	height: 600px;
+	height: 80vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 1) 95%), url('./../img/bg.jpg');
+	
 	background-position: center center;
 	background-size: cover;
 	position: relative;
 	font-family: variables.$secondary-font-family;
-	padding-top: 180px;
+	padding-top: 80px;
 
 	&__titulo {
 		font-size: 40px;
 		font-weight: normal;
 		text-shadow: variables.$text-shadow;
+		color: #313030;
 	}
 
 	&__subtitulo {
 		font-size: 22px;
 		font-weight: normal;
 		text-shadow: variables.$text-shadow;
+		color: #ccc;
 	}
 }
