--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
 $primary-font-family: 'Open Sans', sans-serif;
 $secondary-font-family: 'Playfair Display', serif;
-$color-fondo: #101010;
+$color-fondo: linear-gradient(to bottom, rgba(71, 69, 69, 0.932) , rgba(24, 24, 24, 0.961) );
 $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
